@@ -100,7 +100,7 @@
         <version.junit.vintage>4.13.2</version.junit.vintage>
         <version.junit-vintage-engine>5.7.1</version.junit-vintage-engine>
         <version.logback>1.2.3</version.logback>
-        <version.okhttp>4.3.0</version.okhttp>
+        <version.okhttp>4.9.1</version.okhttp>
         <version.slf4j>1.7.30</version.slf4j>
         <!-- this is the last version of log4j that is compatible with Java 7 -->
         <version.log4j>2.12.1</version.log4j>
